--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "Public website for Dancing Light studios",
   "main": "index.js",
   "scripts": {
-    "build": "npx tailwindcss -i ./public/tailwind.css -o ./public/style.css",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npm-run-all --parallel css eleventy browsersync",
+    "eleventy": "eleventy --watch",
+    "debug": "set DEBUG=* & eleventy",
+    "css": "postcss src/static/css/tailwind.css --o _site/static/css/style.css --watch",
+    "build": "cross-env NODE_ENV=production eleventy && cross-env NODE_ENV=production tailwindcss -i src/static/css/tailwind.css -o _site/static/css/style.css",
+    "browsersync": "browser-sync start --server _site --files _site --port 8080 --no-notify --no-open"
   },
   "repository": {
     "type": "git",
@@ -18,8 +22,23 @@
     "url": "https://github.com/DancingLightStudios/dancinglightstudios.github.io/issues"
   },
   "homepage": "https://github.com/DancingLightStudios/dancinglightstudios.github.io#readme",
-  "devDependencies": {
-    "@tailwindcss/typography": "^0.5.7",
-    "tailwindcss": "^3.1.8"
+  "dependencies": {
+    "@11ty/eleventy": "^1.0.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.3",
+    "@tailwindcss/typography": "^0.5.0",
+    "alpinejs": "^3.7.1",
+    "autoprefixer": "^10.4.2",
+    "browser-sync": "^2.27.7",
+    "cross-env": "^7.0.3",
+    "cssnano": "^5.0.15",
+    "daisyui": "^2.41.0",
+    "html-minifier": "^4.0.0",
+    "js-yaml": "^4.1.0",
+    "luxon": "^2.3.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "prismjs": "^1.26.0",
+    "tailwindcss": "^3.0.13"
   }
 }
