--- a/src/_config-development.yml
+++ b/src/_config-development.yml
@@ -1,1 +1,7 @@
-baseurl: http://localhost:3000/
+# baseurl: http://localhost:3000
+unpublished: true
+
+page_css:
+  style: compressed
+page_js:
+  minify: true
