--- a/src/_config.yml
+++ b/src/_config.yml
@@ -6,15 +6,24 @@ plugins:
   - jekyll-sitemap
   - jekyll-feed
   - jekyll-paginate-v2
+  - jekyll-seo-tag
 
 # !Build Stuff
 markdown:    kramdown
 exclude:     [] # Files and folders to skip when building
 keep_files:  [] # when clobbering the dest, keep the files
-destination: "../dist" # Where jekyll will build the site to
+destination: "dist" # Where jekyll will build the site to
 permalink:   /:title # how urls will be created. eg: "website.com/category/title"
 charset:     utf-8 # Website character set
-baseurl:     /     # root
+baseurl:     ""     # root
+
+# Concatenation configuration
+page_css:
+  path: assets/css/
+  # style: compressed
+page_js:
+  path: assets/js/
+  # minify: true
 
 kramdown:
   parse_block_html: true
@@ -34,7 +43,6 @@ relative_links:
   enabled: true
   collections: true
 
-# !- Content Details
 collections:
   staff_members:
   careers:
@@ -46,6 +54,10 @@ creator: "gregdaynes.com" # Name or twitter handle of the website creator
 lang: "en-CA" # base language for website
 fonts: true
 permalink: pretty
+title: "Project Hyde" # Title for site - used in jekyll-feed
+description: "" # Longform description of site
+keywords: "" # comma separated words to describe site
+ownership: "https://mastodon.social/@gregdaynes" # url for rel=me
 
 # !- Social
 # social:
@@ -78,14 +90,14 @@ feed:
   path: /feed.xml
 
 # !- Mobile
-mobile-optimized: true # is the website mobile optimized. true | false
+# mobile-optimized: true # is the website mobile optimized. true | false
 
 # !- Web App Options
-web-app-enabled: false # options: true | false
-web-app-capable: "" # yes | no
-web-app-title:   "" # tip: keep it short
-web-app-style:   "" # options: default, black, black-translucent
-web-app-color:   "" # used for Windows 8 / RT
+# web-app-enabled: false # options: true | false
+# web-app-capable: "" # yes | no
+# web-app-title:   "" # tip: keep it short
+# web-app-style:   "" # options: default, black, black-translucent
+# web-app-color:   "" # used for Windows 8 / RT
 
 # !- dns-prefetch
 # Identifies a DNS query to resolve the background, so that requests can occur more quickly.
@@ -99,6 +111,7 @@ web-app-color:   "" # used for Windows 8 / RT
 #prefetch:
 #  - "http://example.com/css/style.css"
 
+# !- Sitemap configuration
 defaults:
   - scope:
       path: 'styleguide/**/*.html'
