--- a/src/_data/fonts.yml
+++ b/src/_data/fonts.yml
@@ -1,11 +1,42 @@
 fonts:
-  - name: Montserrat
-    weights:
-      - value: 200
-        italic: true
-      - value: 400
-        italic: true
-      - value: 600
-        italic: false
-      - value: 800
-        italic: false
+  sizes:
+    - name: micro
+      value: 0.5rem
+      leading: 1.5
+      kerning: 0
+    - name: tiny
+      value: 0.75rem
+      leading: 1.5
+      kerning: 0
+    - name: small
+      value: 0.875
+      leading: 1.5
+      kerning: 0
+    - name: base
+      value: 1rem
+      leading: 1.5
+      kerning: 0
+    - name: big
+      value: 1.5rem
+      leading: 1
+      kerning: 0
+    - name: large
+      value: 2.25rem
+      leading: 1
+      kerning: -1px
+    - name: xl
+      value: 3.75
+      leading: 1
+      kerning: 0
+
+  faces:
+    - name: Montserrat
+      weights:
+        - value: 200
+          italic: true
+        - value: 400
+          italic: true
+        - value: 600
+          italic: false
+        - value: 800
+          italic: false
