--- a/src/_data/page-careers.yml
+++ b/src/_data/page-careers.yml
@@ -1,12 +1,14 @@
 title: Careers
+header: Careers
+subheader: Join Our Mission
 body: >-
-  **Join Our Mission**
-
-
-  At Dancing Light Studios, we're always excited about the potential of new connections. We're not just a company - we're a collective of innovators, dreamers, and doers, striving to reshape the future of education and entertainment technology. We believe in the power of technology to inspire, engage, and empower. Our team is composed of empathetic innovators, individuals with sincere respect for each other, adaptively ambitious, and those who blend their vast expertise with humility.
-
-
-  We're not currently hiring, but the future is always full of possibilities. We're growing and evolving, and we're eager to connect with passionate, talented individuals who resonate with our mission and values. If you're a technical artist, software developer, network engineer, project manager, or administrative professional with an interest in working on the cutting edge of AR, VR, and MR technology, we'd love to hear from you.
+  At Dancing Light Studios, we're always excited about the potential of new
+  connections. We're not just a company - we're a collective of innovators,
+  dreamers, and doers, striving to reshape the future of education and
+  entertainment technology. We believe in the power of technology to inspire,
+  engage, and empower. Our team is composed of empathetic innovators,
+  individuals with sincere respect for each other, adaptively ambitious, and
+  those who blend their vast expertise with humility.
 
 
   By choosing to join us, you're choosing a workspace that values innovation, respects diversity, encourages growth, and truly cares about making a positive impact in the world. We strive to create an environment where everyone feels heard, appreciated, and inspired to contribute to our shared mission.
@@ -16,3 +18,35 @@ body: >-
 
 
   Thank you for considering Dancing Light Studios. We're excited about the potential to create, innovate, and inspire together.
+no_posts: We're not currently hiring, but the future is always full of
+  possibilities. We're growing and evolving, and we're eager to connect with
+  passionate, talented individuals who resonate with our mission and values. If
+  you're a technical artist, software developer, network engineer, project
+  manager, or administrative professional with an interest in working on the
+  cutting edge of AR, VR, and MR technology, we'd love to hear from you.
+job_post_about_us: "Dancing Light Studios stands at the exciting intersection of
+  education and entertainment technology. We're a team of empathetic innovators,
+  fueled by respect, adaptability, and humility. Our mission: reshaping the
+  future of classrooms and venues worldwide through advanced, engaging, and
+  beneficial tech solutions."
+job_post_why_join: At Dancing Light Studios, we value authenticity,
+  collaboration, and the power of innovation. When you join our team, you are
+  not just accepting a role; you are embracing a community of empathetic
+  innovators, bound by a shared mission and core values. We are a team where
+  everyone’s voice is respected and every opinion is valued. With us, you are
+  more than a Software Developer; you're a key player in shaping the future of
+  immersive technologies in education and entertainment. Our workspace thrives
+  on mutual respect and continuous learning - an environment where making
+  mistakes is accepted, because we're all human and we learn from them. We're
+  transparent, honest, and direct but also professional, respectful, and
+  welcoming. If you are looking for a team where your contributions matter, your
+  growth is encouraged, and your individuality is celebrated, Dancing Light
+  Studios could be your next great adventure.
+job_post_how_to_apply: >-
+  Interested in joining our mission and resonating with our values? Click
+  "Apply" to start your journey with us or connect with us on LinkedIn. Even if
+  we don't have a position available immediately, we believe in the power of
+  connection and the potential of what could come in the future.
+
+
+  Dancing Light Studios is proud to be an equal opportunity employer. We celebrate diversity and are committed to creating an inclusive environment for all employees.
