--- a/src/_data/page-home.yml
+++ b/src/_data/page-home.yml
@@ -29,10 +29,7 @@ lbe-link:
   href: /location-based-entertainment
 about-leader: "Empowering the Future: Education and Entertainment Reimagined."
 about-text: >-
-  At Dancing Light Studios, we're painting the horizon with dreams. Envisage a
-  tapestry where education doesn’t just inform but enthrals, where entertainment
-  doesn’t just amuse but enlightens. Here, advanced technology isn’t a
-  privilege; it’s an inheritance for all.
+  At Dancing Light Studios, we're painting the horizon with dreams. Envisage a tapestry where education doesn’t just inform but enthrals, where entertainment doesn’t just amuse but enlightens. Here, advanced technology isn’t a privilege; it’s an inheritance for all.
 
 
   Picture classrooms and venues as stages for boundless imaginations, with walls that talk, floors that pulsate, and air that sings the tales of wonders. We're fashioning a symphony of Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR), designed to not just be seen or heard but felt.
