--- a/src/_data/page-pl.yml
+++ b/src/_data/page-pl.yml
@@ -1,5 +1,6 @@
 header: Physical Literacy
-subheader: "Unlock the Power of Movement: Inspiring Physical Literacy for a Brighter Future"
+subheader: "Unlock the Power of Movement: Inspiring Physical Literacy for a
+  Brighter Future"
 permalink: /physical-literacy/index.html
 body: >-
   At Dancing Light Studios, we know that physical literacy is a critical
@@ -23,6 +24,11 @@ body: >-
 
   If you're interested in bringing our physical literacy solutions to your school, please don't hesitate to contact us. We would be happy to answer any questions you may have and provide you with more information about our products and services. Let's work together to prioritize physical activity and healthy living in your school community.
 images:
-  - src: /images/uploads/gregdaynes_a_group_of_people_playing_a_holographic_game_of_floo_68aa7799-e1ea-43c0-b1d6-e1ef6c8fbb9d.jpg
-  - src: /images/uploads/gregdaynes_a_small_group_of_people_on_a_field_trip_standing_in__9ff0b8d8-5c32-413c-a48d-735746cdc30f.jpg
-  - src: /images/uploads/gregdaynes_a_kid_playing_hopscotch_illuminated_by_bright_colour_6ce8c303-3724-45fe-b0dc-a73e2d7e06e6.jpg
+  - src: /images/uploads/group_of_kids_playing_floor_is_lava_on_digital_tiles.webp
+    alt: A group of kids standing on an floor made of interactive display tiles
+      showing lava.
+  - src: /images/uploads/a_small_group_of_kids_on_a_field_trip_at_interactive_aquarium.webp
+    alt: A group of youths experiencing an immersive aquarium exhibit
+  - src: /images/uploads/a_kid_playing_hopscotch_illuminated_by_bright_colour_3.webp
+    alt: "A child reaching out to touch projected colours and shapes on a simulated
+      cobblestone floor. "
