--- a/src/_data/site-nav.yml
+++ b/src/_data/site-nav.yml
@@ -1,11 +1,11 @@
 items:
   - text: Physical Literacy
-    url: "/physical-literacy"
+    url: /physical-literacy
   - text: Location Based Entertainment
-    url: "/location-based-entertainment"
+    url: /location-based-entertainment
   - text: About
-    url: "/about"
+    url: /about
   - text: Contact
     url: "#contact"
-  # - text: News
-  #   url: "/news"
+  - text: Careers
+    url: /careers
