--- a/src/_data/site-nav-home.yml
+++ b/src/_data/site-nav-home.yml
@@ -5,7 +5,7 @@ items:
     url: "#location-based-entertainment"
   - text: About
     url: "#about"
+  - text: Careers
+    url: /careers
   - text: Contact
     url: "#contact"
-  # - text: News
-  #   url: "/news"
