--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -82,10 +82,6 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - label: Layout
-        name: layout
-        widget: hidden
-        default: post
       - label: Title
         name: title
         widget: string
@@ -124,9 +120,9 @@ collections:
             name: alt
             widget: string
             required: false
-      - label: Permalink
-        name: permalink
-        widget: string
+      - label: Excerpt
+        name: excerpt
+        widget: markdown
         required: false
       - label: Body
         name: body
