chore: add campfire menu

--- a/src/_data/footer-nav.yml
+++ b/src/_data/footer-nav.yml
@@ -1,9 +1,11 @@
 items:
   - text: Physical Literacy
-    url: "#physical-literacy"
+    url: /physical-literacy
   - text: Location Based Entertainment
-    url: "#location-based-entertainment"
+    url: /location-based-entertainment
   - text: Campfire
     url: /campfire
   - text: About
-    url: "#about"
+    url: /about
+  - text: Careers
+    url: /careers
