--- a/.github/workflows/jekyll_build.yml
+++ b/.github/workflows/jekyll_build.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2.1' # Not needed with a .ruby-version file
+          ruby-version: ".tool-versions"
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - run: bundle
       - run: ./build prod
